# free-surface

./: .pre-commit-config.yaml  Cargo.toml  README  README.md  cspell.json  rustfmt.toml
.github/workflows/: conventional-commit.yml  rust.yml
asc2xyz/: asc2xyz.pl
src/: aui.rs  config.rs  lib.rs  main.rs  math.rs  storage.rs  utils.rs
src/aui/: configviewer.rs
src/aui/configviewer/: damocles.rs  human.rs  json.rs  porcelain.rs
src/config/: casfile.rs  configvalue.rs  dicofile.rs  parse_helpers.rs  textloc.rs
src/config/casfile/: tests.rs
src/config/configvalue/: tests.rs
src/config/dicofile/: dicokeyword.rs  parser.rs
src/config/parse_helpers/: damocles.rs  keywordparseinfo.rs  locatedchars.rs
src/config/parse_helpers/damocles/: tests.rs
src/config/parse_helpers/tests/: find_key_assignment.rs  parse_fields.rs  parse_fortran_float.rs  unquote_single.rs
src/math/: backend.rs  bief.rs
src/math/backend/: cpu.rs
src/mesh/: celliterator.rs  neighbors.rs  percellcoords.rs
src/storage/: selafin.rs
src/storage/selafin/: container.rs  geometry.rs  parser.rs  variable.rs  writer.rs
src/utils/: fs.rs
src/utils/fs/: tests.rs
tools/dict/: free-surface.txt  rust.txt  telemac.txt
