[package]
name = "free-surface"
version = "0.0.1"
edition = "2024"

[[bin]]
name = "check-config"

[[bin]]
name = "slf-viewer"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
thiserror = "2.0.18"
binrw     = "0.15"
chrono = "0.4"

[dev-dependencies]
indoc = "2.0.7"
tempfile = "3"
