[package]
name = "free-surface"
version = "0.0.1"
edition = "2024"

[[bin]]
name = "check-config"

[[bin]]
name = "slf-dump"
path = "src/bin/slf_dump.rs"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
thiserror = "2.0.18"
binrw     = "0.15"
chrono = "0.4"
regex = "1.12.3"
anstream = "1.0.0"
anstyle = "1.0.0"
serde_json = "1.0"
serde = "1.0.228"

[dev-dependencies]
indoc = "2.0.7"
tempfile = "3"
